[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/sprites/UI/starfull2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/UI/staroutline2bullets.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/UI/staroutline2time.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/UI/bgScoreboard.png" type="Texture" id=4]
[ext_resource path="res://assets/Fonts/Gamer.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Themes/ui16real.tres" type="Theme" id=6]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=7]
[ext_resource path="res://UI/inGame/EndGameScreen.gd" type="Script" id=8]
[ext_resource path="res://assets/sprites/UI/bgTime.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/UI/bgShots.png" type="Texture" id=10]
[ext_resource path="res://Themes/UI16.tres" type="Theme" id=11]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=20]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 5 )

[sub_resource type="Curve" id=16]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.421788, 0.815642 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1, 1, 0.972656, 0, 1 )

[node name="EndGameScreen" type="Node2D"]
pause_mode = 2
position = Vector2( 366, 11 )
scale = Vector2( 2, 2 )
z_index = 30
script = ExtResource( 8 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -209.0
margin_top = -20.0
margin_right = 166.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 527, 297.333 )
color = Color( 0, 0, 0, 0.392157 )

[node name="BG scoreboard" type="TextureRect" parent="."]
margin_left = -20.0
margin_top = 53.0
margin_right = 88.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( -46, 31 )
texture = ExtResource( 4 )

[node name="BG shots" type="TextureRect" parent="."]
margin_left = -135.5
margin_top = 53.0
margin_right = -27.5
margin_bottom = 105.0
rect_pivot_offset = Vector2( -46, 31 )
texture = ExtResource( 10 )

[node name="BG Time2" type="TextureRect" parent="."]
margin_left = -135.5
margin_top = 108.5
margin_right = -27.5
margin_bottom = 160.5
rect_pivot_offset = Vector2( -46, 31 )
texture = ExtResource( 9 )

[node name="Bullets shot" type="RichTextLabel" parent="."]
margin_left = -113.0
margin_top = 51.5
margin_right = -83.0
margin_bottom = 64.5
theme = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = -5
bbcode_enabled = true
bbcode_text = "Shots"
text = "Shots"

[node name="Bullets shot2" type="RichTextLabel" parent="."]
margin_left = -19.0
margin_top = 51.5
margin_right = 88.0
margin_bottom = 64.5
theme = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = -5
bbcode_enabled = true
bbcode_text = "[center]LeaderBoard"
text = "LeaderBoard"

[node name="sharp_results" type="RichTextLabel" parent="."]
margin_left = -135.5
margin_top = 64.0
margin_right = -27.5
margin_bottom = 87.0
theme = ExtResource( 7 )
bbcode_enabled = true
scroll_active = false

[node name="sharp_nextOrBest" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -135.5
margin_top = 85.0
margin_right = -27.5
margin_bottom = 102.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true

[node name="Bronze2" type="Node2D" parent="."]
position = Vector2( -73, 116 )

[node name="Outline" type="Sprite" parent="Bronze2"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Bronze2"]
visible = false
texture = ExtResource( 1 )

[node name="Silver2" type="Node2D" parent="."]
position = Vector2( -63.1667, 116 )

[node name="Outline" type="Sprite" parent="Silver2"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Silver2"]
visible = false
texture = ExtResource( 1 )

[node name="Gold2" type="Node2D" parent="."]
position = Vector2( -53.3333, 116 )

[node name="Outline" type="Sprite" parent="Gold2"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Gold2"]
visible = false
texture = ExtResource( 1 )

[node name="Bronze" type="Node2D" parent="."]
position = Vector2( -73, 60.5 )

[node name="Outline" type="Sprite" parent="Bronze"]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Bronze"]
visible = false
texture = ExtResource( 1 )

[node name="Silver" type="Node2D" parent="."]
position = Vector2( -63.1667, 60.5 )

[node name="Outline" type="Sprite" parent="Silver"]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Silver"]
visible = false
texture = ExtResource( 1 )

[node name="Gold" type="Node2D" parent="."]
position = Vector2( -53.3333, 60.5 )

[node name="Outline" type="Sprite" parent="Gold"]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Gold"]
visible = false
texture = ExtResource( 1 )

[node name="speed" type="RichTextLabel" parent="."]
margin_left = -110.0
margin_top = 107.5
margin_right = -83.0
margin_bottom = 122.5
theme = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = -5
bbcode_enabled = true
bbcode_text = "TIME"
text = "TIME"

[node name="speed_results" type="RichTextLabel" parent="."]
margin_left = -135.5
margin_top = 120.0
margin_right = -27.5
margin_bottom = 154.0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true

[node name="speed_nextOrBest" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -135.5
margin_top = 141.0
margin_right = -27.5
margin_bottom = 161.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2( -135.5, 145 )
points = PoolVector2Array( 130.5, -4, 207, -4 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )

[node name="Rank" type="Node2D" parent="."]
position = Vector2( -5, 76.5 )

[node name="01" type="RichTextLabel" parent="Rank"]
margin_right = 38.0
margin_bottom = 34.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "1."
text = "1."

[node name="02" type="RichTextLabel" parent="Rank"]
margin_top = 14.1667
margin_right = 38.0
margin_bottom = 48.1667
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "2."
text = "2."

[node name="03" type="RichTextLabel" parent="Rank"]
margin_top = 28.3333
margin_right = 38.0
margin_bottom = 62.3333
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "3."
text = "3."

[node name="04" type="RichTextLabel" parent="Rank"]
margin_top = 42.0
margin_right = 38.0
margin_bottom = 76.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "4."
text = "4."

[node name="05" type="RichTextLabel" parent="Rank"]
margin_top = 57.1667
margin_right = 38.0
margin_bottom = 91.1667
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "5."
text = "5."

[node name="Name" type="Node2D" parent="."]
position = Vector2( 7.66667, 76.5 )

[node name="1" type="RichTextLabel" parent="Name"]
margin_left = 7.00002
margin_right = 71.0
margin_bottom = 33.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="2" type="RichTextLabel" parent="Name"]
margin_left = 7.00002
margin_top = 14.1667
margin_right = 71.0
margin_bottom = 47.1667
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="3" type="RichTextLabel" parent="Name"]
margin_left = 7.0
margin_top = 27.6667
margin_right = 71.0
margin_bottom = 61.6667
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="4" type="RichTextLabel" parent="Name"]
margin_left = 7.00002
margin_top = 42.0
margin_right = 71.0
margin_bottom = 75.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="5" type="RichTextLabel" parent="Name"]
margin_left = 7.0
margin_top = 57.0
margin_right = 71.0
margin_bottom = 93.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="6" type="RichTextLabel" parent="Name"]
margin_left = 279.333
margin_top = 62.0
margin_right = 343.333
margin_bottom = 98.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="7" type="RichTextLabel" parent="Name"]
margin_left = 279.333
margin_top = 62.0
margin_right = 343.333
margin_bottom = 98.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "___"
text = "___"

[node name="Time" type="Node2D" parent="."]
position = Vector2( 20.3333, 76.5 )

[node name="1" type="RichTextLabel" parent="Time"]
margin_left = 25.6667
margin_right = 95.6667
margin_bottom = 33.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "__:__"
text = "__:__"

[node name="2" type="RichTextLabel" parent="Time"]
margin_left = 25.6667
margin_top = 14.1667
margin_right = 95.6667
margin_bottom = 47.1667
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "__:__"
text = "__:__"

[node name="3" type="RichTextLabel" parent="Time"]
margin_left = 26.0
margin_top = 27.6667
margin_right = 96.0
margin_bottom = 63.6667
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "__:__"
text = "__:__"

[node name="4" type="RichTextLabel" parent="Time"]
margin_left = 25.6667
margin_top = 42.0
margin_right = 95.6667
margin_bottom = 75.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "__:__"
text = "__:__"

[node name="5" type="RichTextLabel" parent="Time"]
margin_left = 26.0
margin_top = 57.0
margin_right = 96.0
margin_bottom = 95.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "__:__"
text = "__:__"

[node name="LevelsButton" type="Button" parent="."]
margin_left = -112.5
margin_top = 162.0
margin_right = -59.5
margin_bottom = 188.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "All Levels"

[node name="retryButton" type="Button" parent="."]
margin_left = 14.5
margin_top = 165.5
margin_right = 45.5
margin_bottom = 183.5
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Retry"
align = 2

[node name="nextLevelButton" type="Button" parent="."]
margin_left = -66.0
margin_top = 159.0
margin_right = 20.0
margin_bottom = 185.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Next"
icon_align = 1

[node name="SRRetryButton" type="Button" parent="."]
visible = false
margin_left = -66.0
margin_top = 159.0
margin_right = 20.0
margin_bottom = 185.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "RETRY"
icon_align = 1

[node name="SRStopSR" type="Button" parent="."]
visible = false
margin_left = 48.5
margin_top = -7.0
margin_right = 134.5
margin_bottom = 19.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Stop Speedrun"
icon_align = 1

[node name="SRSubmit" type="Node2D" parent="."]
visible = false
position = Vector2( 48.5, -7 )

[node name="title" type="Label" parent="SRSubmit"]
margin_left = -184.0
margin_top = 21.0
margin_right = 38.0
margin_bottom = 35.0
theme = ExtResource( 6 )
text = "Speedrun Time"
align = 1

[node name="score" type="Label" parent="SRSubmit"]
margin_left = -184.0
margin_top = 28.0
margin_right = 39.0
margin_bottom = 79.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 19 )
text = "00:00:00"
align = 1

[node name="RetrySpeedRun" type="Button" parent="SRSubmit"]
margin_left = -2.0
margin_top = 169.0
margin_right = 40.0
margin_bottom = 195.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Retry"
align = 2
icon_align = 1

[node name="SeeSRLB" type="Button" parent="SRSubmit"]
margin_left = -138.5
margin_top = 169.0
margin_right = -6.5
margin_bottom = 195.0
theme = SubResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_fonts/font = SubResource( 22 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Leaderboard"
icon_align = 1

[node name="Main" type="Button" parent="SRSubmit"]
margin_left = -184.5
margin_top = 169.0
margin_right = -102.5
margin_bottom = 195.0
theme = SubResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Main"
align = 0
icon_align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="godGunLabel" type="Label" parent="."]
visible = false
margin_left = -135.5
margin_top = 19.0
margin_right = 47.5
margin_bottom = 51.0
theme = ExtResource( 11 )
custom_constants/line_spacing = -1
text = "God gun was used this level.
No scoreboard or unlocking level."

[node name="PBParticles" type="CPUParticles2D" parent="."]
position = Vector2( -80, 136 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 273.4
initial_velocity_random = 0.25
angle_curve = SubResource( 16 )
scale_amount = 16.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 17 )
color_ramp = SubResource( 18 )

[node name="HSParticles" type="CPUParticles2D" parent="."]
position = Vector2( 33.5, 108.5 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 273.4
initial_velocity_random = 0.25
angle_curve = SubResource( 16 )
scale_amount = 16.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 17 )
color_ramp = SubResource( 18 )

[connection signal="pressed" from="LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="retryButton" to="." method="_on_retryButton_pressed"]
[connection signal="pressed" from="nextLevelButton" to="." method="_on_nextLevelButton_pressed"]
[connection signal="pressed" from="SRRetryButton" to="." method="_on_SRRetryButton_pressed"]
[connection signal="pressed" from="SRStopSR" to="." method="_on_SRStopSR_pressed"]
[connection signal="pressed" from="SRSubmit/RetrySpeedRun" to="." method="_on_RetrySpeedRun_pressed"]
[connection signal="pressed" from="SRSubmit/SeeSRLB" to="." method="_on_SeeSRLB_pressed"]
[connection signal="pressed" from="SRSubmit/Main" to="." method="_on_Main_pressed"]
